--- a/application/views/scripts/mergulho/visualizar.phtml
+++ b/application/views/scripts/mergulho/visualizar.phtml
@@ -16,10 +16,9 @@
     <table id="dataTable" class="display" cellspacing="0" width="100%">
         <thead>
             <tr>
-            <th>Contagem</th>
+            <th>Entrevista</th>
             <th>Ficha Diária</th>
             <th>Monitoramento</th>
-            <th>Entrevista</th>
             <th>Pescador</th>
             <th>Apelido</th>
             <th>Barco</th>
@@ -29,13 +28,12 @@
         </thead>
         <tbody>
 
-            <?php $i = 1;
+            <?php 
             foreach ($this->dados as $key => $entrevista): ?>
                 <tr>
-                <td><?= $i++ ?></td>
+                <td><?= $entrevista['mer_id'] ?></td>
                 <td><?= $entrevista['fd_id'] ?></td>
                 <td><?= $entrevista['mnt_id'] ?></td>
-                <td><?= $entrevista['mer_id'] ?></td>
                 <td><?= $entrevista['tp_nome'] ?></td>
                 <td><?= $entrevista['tp_apelido'] ?></td>
                 <td><?= $entrevista['bar_nome'] ?></td>
