--- a/application/views/scripts/tipo-embarcacao/index.phtml
+++ b/application/views/scripts/tipo-embarcacao/index.phtml
@@ -4,12 +4,16 @@
 
     <a href="<?= $this->url(array("controller" => "tipo-embarcacao", "action" => "novo"), null, true) ?>" id="botao-ancora">Novo</a>
     <fieldset id="dadosSocial"></fieldset>
-    <table>
+    <table id="tblPerfil" class="display" cellspacing="0" width="100%">
+        <thead>
         <tr>
             <th>ID</th>
             <th>Tipo de Embarcação</th>
+            <th colspan="1"></th>
+            <th colspan="1"></th>
         </tr>
-
+        </thead>
+        <tbody>
         <?php
         foreach ($this->dados as $key => $tipoEmbarcacao):
             ?>
@@ -17,7 +21,7 @@
                 <td><?= $tipoEmbarcacao['tte_id'] ?></td>
                 <td><?= $tipoEmbarcacao['tte_tipoembarcacao'] ?></td>
 
-                <td class="td-botao">
+                <td>
                     <a href="<?= $this->url(array("controller" => "tipo-embarcacao", "action" => "editar", "id" => $tipoEmbarcacao['tte_id']), null, true) ?>">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
@@ -25,7 +29,7 @@
                     </a>
                 </td>
 
-                <td class="td-botao">
+                <td>
                     <a value="Excluir" onclick="beforeDelete('<?= $this->url(array("controller" => "tipo-embarcacao", "action" => "excluir", "id" => $tipoEmbarcacao['tte_id']), null, true) ?>')">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                                 <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
@@ -35,6 +39,7 @@
 
             </tr>
         <?php endforeach; ?>
+        </tbody>
     </table>
     <br/><br/>
     <a href="<?= $this->url(array("controller" => "tipo-embarcacao", "action" => "relatorio"), null, true) ?>" id="botao-ancora" target="_blank">Gerar Relatório</a>
