--- a/application/views/scripts/area-pesca/index.phtml
+++ b/application/views/scripts/area-pesca/index.phtml
@@ -2,18 +2,22 @@
 
 <a href="<?= $this->url(array("controller" => "area-pesca", "action" => "novo"), null, true) ?>" id="botao-ancora">Novo</a>
     <fieldset id="dadosSocial"></fieldset>
-    <table>
+    <table id="tblPerfil" class="display" cellspacing="0" width="100%">
+        <thead>
         <tr>
-            <th>ID</th>
-            <th>Area de Pesca</th>
+            <th colspan="1">ID</th>
+            <th colspan="1">Area de Pesca</th>
+            <th colspan="1"></th>
+            <th colspan="1"></th>
         </tr>
-
+        </thead>
+        <tbody>
         <?php foreach ($this->area_pesca as $key => $areaPesca): ?>
             <tr>
                 <td><?= $areaPesca['tareap_id'] ?></td>
                 <td><?= $areaPesca['tareap_areapesca'] ?></td>
 
-                <td class="td-botao">
+                <td>
                     <a href="<?= $this->url(array("controller" => "area-pesca", "action" => "editar", "id" => $areaPesca['tareap_id']), null, true) ?>">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
@@ -21,7 +25,7 @@
                     </a>
                 </td>
 
-                <td class="td-botao">
+                <td>
                     <a value="Excluir" onclick="beforeDelete('<?= $this->url(array("controller" => "area-pesca", "action" => "excluir", "id" => $areaPesca['tareap_id']), null, true) ?>')">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                                 <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
@@ -31,6 +35,7 @@
 
             </tr>
         <?php endforeach; ?>
+        </tbody>
     </table>
     <br/><br/>
 <a href="<?= $this->url(array("controller" => "area-pesca", "action" => "relatorio"), null, true) ?>" id="botao-ancora" target="_blank">Gerar Relatório</a>
