--- a/application/views/scripts/pescador/index.phtml
+++ b/application/views/scripts/pescador/index.phtml
@@ -47,45 +47,51 @@
             </div>    
             
         <br/>
-        <table id="tablePescadores" class="display">
+        <table id="tblPerfil" class="display" cellspacing="0" width="100%">
+            <thead>
             <tr>
-                <th>ID</th>
-                <th>Nome</th>
-                <th>Apelido</th>
-                <th width="20%">Projeto Cadastrado</th>
-                <th width="20%">Porto</th>
+                <th colspan="1">ID</th>
+                <th colspan="1">Nome</th>
+                <th colspan="1">Apelido</th>
+                <th colspan="1" width="20%">Projeto Cadastrado</th>
+                <th colspan="1" width="20%">Porto</th>
+                <th colspan="1"></th>
+                <th colspan="1"></th>
+                <th colspan="1"></th>
+                <th colspan="1"></th>
             </tr>
-
+            </thead>
+            <tbody>
             <?php foreach ($this->dados as $key => $pescador): ?>
                 <tr>
                     <td><?= $pescador['tp_id'] ?></td>
                     <td><?= $pescador['tp_nome']?></td>
-                     <td><?= $pescador['tp_apelido'] ?></td>
-                     <td><?= $pescador['tpr_descricao'] ?></td>
-                     <td><?= $pescador['pto_nome'] ?></td>
+                    <td><?= $pescador['tp_apelido'] ?></td>
+                    <td><?= $pescador['tpr_descricao'] ?></td>
+                    <td><?= $pescador['pto_nome'] ?></td>
 
-                    <td class="td-botao">
+                    <td>
                         <a href="<?= $this->url(array("controller" => "pescador", "action" => "editar", "id" => $pescador['tp_id']), null, true) ?>">
                             <ul id="icons" class="ui-widget ui-helper-clearfix">
                                 <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
                             </ul>
                         </a>
                     </td>
-                    <td class="td-botao">
+                    <td>
                         <a  name="Excluir"  onclick="beforeDelete('<?= $this->url(array("controller" => "pescador", "action" => "excluir", "id" => $pescador['tp_id']), null, true) ?>')">
                             <ul id="icons" class="ui-widget ui-helper-clearfix">
                                 <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
                             </ul>
                         </a>
                     </td>
-                    <td class="td-botao">
+                    <td>
                         <a href="<?= $this->url(array("controller" => "pescador", "action" => "imprimirpescadorid", "id_pescador" => $pescador['tp_id']), null, true) ?>">
                             <ul id="icons" class="ui-widget ui-helper-clearfix">
                                 <li class="ui-state-default ui-corner-all" title="Imprimir"><span class="ui-icon ui-icon-print"></span></li>
                             </ul>
                         </a>
                     </td>
-                    <td class="td-botao">
+                    <td>
                         <input type="button" name="Especialista" class="button-especialista" title="Especialista" <?php if(empty($pescador['tp_especialidade'])){ echo "disabled='True'";} ?>onclick="jsRedirectEspecialista('<?= $this->url(array("controller" => "pescador", "action" => "editar", "id" => $pescador['tp_id']), null, true) ?>', '#pescador_especialista')">
                     </td>
 
@@ -94,6 +100,7 @@
 
                 </tr>
             <?php endforeach; ?>
+            </tbody>
         </table>
         <br/><br/>
         </form>
