--- a/application/views/scripts/porte-embarcacao/index.phtml
+++ b/application/views/scripts/porte-embarcacao/index.phtml
@@ -4,18 +4,22 @@
 
     <a href="<?= $this->url(array("controller" => "porte-embarcacao", "action" => "novo"), null, true) ?>" id="botao-ancora">Novo</a>
     <fieldset id="dadosSocial"></fieldset>
-    <table>
+    <table id="tblPerfil" class="display" cellspacing="0" width="100%">
+        <thead>
         <tr>
             <th>ID</th>
             <th>Porte Embarcação</th>
+            <th colspan="1"></th>
+            <th colspan="1"></th>
         </tr>
-
+        </thead>
+        <tbody>
         <?php foreach ($this->dados as $key => $porteEmbarcacao): ?>
             <tr>
                 <td><?= $porteEmbarcacao['tpe_id'] ?></td>
                 <td><?= $porteEmbarcacao['tpe_porte'] ?></td>
 
-                <td class="td-botao">
+                <td>
                     <a href="<?= $this->url(array("controller" => "porte-embarcacao", "action" => "editar", "id" => $porteEmbarcacao['tpe_id']), null, true) ?>">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
@@ -23,7 +27,7 @@
                     </a>
                 </td>
                 
-                <td class="td-botao">
+                <td>
                     <a value="Excluir" onclick="beforeDelete('<?= $this->url(array("controller" => "porte-embarcacao", "action" => "excluir", "id" => $porteEmbarcacao['tpe_id']), null, true) ?>')">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                                 <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
@@ -33,6 +37,7 @@
 
             </tr>
         <?php endforeach; ?>
+        </tbody>
     </table>
     <br/><br/>
     <a href="<?= $this->url(array("controller" => "porte-embarcacao", "action" => "relatorio"), null, true) ?>" id="botao-ancora" target="_blank">Gerar Relatório</a>
