--- a/application/views/scripts/programa-social/index.phtml
+++ b/application/views/scripts/programa-social/index.phtml
@@ -3,18 +3,22 @@
 
     <a href="<?= $this->url(array("controller" => "programa-social", "action" => "novo"), null, true) ?>" id="botao-ancora">Novo</a>
     <fieldset id="dadosSocial"></fieldset>
-    <table>
+    <table id="tblPerfil" class="display" cellspacing="0" width="100%">
+        <thead>
         <tr>
             <th>ID</th>
             <th>Programa Social</th>
+            <th colspan="1"></th>
+            <th colspan="1"></th>
         </tr>
-
+        </thead>
+        <tbody>
         <?php foreach ($this->programasSocial as $key => $programaSocial): ?>
             <tr>
                 <td><?= $programaSocial['prs_id'] ?></td>
                 <td><?= $programaSocial['prs_programa'] ?></td>
 
-                <td class="td-botao">
+                <td>
                     <a href="<?= $this->url(array("controller" => "programa-social", "action" => "editar", "id" => $programaSocial['prs_id']), null, true) ?>">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
@@ -22,7 +26,7 @@
                     </a>
                 </td>
 
-                <td class="td-botao">
+                <td>
                     <a href="<?= $this->url(array("controller" => "programa-social", "action" => "excluir", "id" => $programaSocial['prs_id']), null, true) ?>">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-trash"></span></li>
@@ -32,6 +36,7 @@
 
             </tr>
         <?php endforeach; ?>
+        </tbody>
     </table>
     <br/><br/>
     <a href="<?= $this->url(array("controller" => "programa-social", "action" => "relatorio"), null, true) ?>" id="botao-ancora" target="_blank">Gerar Relatório</a>
