--- a/application/views/scripts/tipo-renda/index.phtml
+++ b/application/views/scripts/tipo-renda/index.phtml
@@ -3,18 +3,22 @@
 
     <a href="<?= $this->url(array("controller" => "tipo-renda", "action" => "novo"), null, true) ?>" id="botao-ancora">Novo</a>
     <fieldset id="dadosSocial"></fieldset>
-    <table>
+    <table id="tblPerfil" class="display" cellspacing="0" width="100%">
+        <thead>
         <tr>
             <th>ID</th>
             <th>Tipo Renda</th>
+            <th colspan="1"></th>
+            <th colspan="1"></th>
         </tr>
-
+        </thead>
+        <tbody>
         <?php foreach ($this->assignTipoRenda as $key => $dadosTipoRenda): ?>
             <tr>
                 <td><?= $dadosTipoRenda['ttr_id'] ?></td>
                 <td><?= $dadosTipoRenda['ttr_descricao'] ?></td>
 
-                <td class="td-botao">
+                <td>
                     <a href="<?= $this->url(array("controller" => "tipo-renda", "action" => "editar", "id" => $dadosTipoRenda['ttr_id']), null, true) ?>">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
@@ -22,7 +26,7 @@
                     </a>
                 </td>
 
-                <td class="td-botao">
+                <td>
                     <a value="Excluir" onclick="beforeDelete('<?= $this->url(array("controller" => "tipo-renda", "action" => "excluir", "id" => $dadosTipoRenda['ttr_id']), null, true) ?>')">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                                 <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
@@ -33,6 +37,7 @@
 
             </tr>
         <?php endforeach; ?>
+        </tbody>
     </table>
     <br/><br/>
     <a href="<?= $this->url(array("controller" => "tipo-renda", "action" => "relatorio"), null, true) ?>" id="botao-ancora" target="_blank">Gerar Relatório</a>
