--- a/application/views/scripts/pescador/relatorio.phtml
+++ b/application/views/scripts/pescador/relatorio.phtml
@@ -16,7 +16,8 @@
             <li><img src="img/pdf-icon.png" class="icon-relatorios"/><a href="<?= $this->url(array("controller" => "pescador", "action" => "relatoriopescadorporto"), null, true) ?>" target="_blank" class="relatorio">Pescadores por Porto - Todos</a></li>
             <li><img src="img/pdf-icon.png" class="icon-relatorios"/><a href="<?= $this->url(array("controller" => "pescador", "action" => "relatoriopescadorgroupcomunidade"), NULL, true) ?>"target="_blank" class="relatorio">Pescadores Agrupados Por Comunidades - Todos</a></li>
             <li><img src="img/pdf-icon.png" class="icon-relatorios"/><a href="<?= $this->url(array("controller" => "pescador", "action" => "relatoriopescadorgroupcolonia"), NULL, true) ?>"target="_blank" class="relatorio">Pescadores Agrupados Por Colônias - Todos</a></li>
-            <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "relatorios", "action" => "relatoriocompletopescadores"), null, true) ?>"target="_blank" class="relatorio">Pescadores - Com todos os Dados</a></li>      
+            <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "relatorios", "action" => "relatoriopescadores"), null, true) ?>"target="_blank" class="relatorio">Pescadores Com Todos os Dados</a></li>
+            <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "relatorios", "action" => "relatoriocompletopescadores"), null, true) ?>"target="_blank" class="relatorio">Pescadores Monitorados</a></li>      
             <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "relatorios", "action" => "relatorioespecialista"), null, true) ?>"target="_blank" class="relatorio">Pescadores Especialistas - Com Todos os Dados</a></li>
         </ul>
 </fieldset>
