Ajax para editar Pesqueiro e Especie capturada

--- a/application/views/scripts/acompanhado/index.phtml
+++ b/application/views/scripts/acompanhado/index.phtml
@@ -25,7 +25,7 @@
                     <td><?= $dadosAcompanhamento['tacp_id'] ?></td>
                     <td><?= $dadosAcompanhamento['tacp_companhia'] ?></td>
                     <td class="td-botao">
-                        <a name="Editar" onclick="jsUpdateDynamic('<?= $dadosAcompanhamento['tacp_id'] ?>', '<?= $dadosAcompanhamento['tacp_companhia'] ?>', document.getElementById('acompanhamento'))">
+                        <a name="Editar" onclick="jsUpdateDynamic('<?= $dadosAcompanhamento['tacp_id'] ?>', '<?= $dadosAcompanhamento['tacp_companhia'] ?>', document.getElementById('formEntrevista'))">
                             <ul id="icons" class="ui-widget ui-helper-clearfix">
                                 <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
                             </ul>
