--- a/application/views/scripts/ratoeira/editar.phtml
+++ b/application/views/scripts/ratoeira/editar.phtml
@@ -173,7 +173,7 @@
         <fieldset class="noEditable"><legend>Pesqueiro:</legend>
             <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
                 <div id="base">
-                    <input class="responsivo" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "ratoeira", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['rat_id'] ?>','distancia')" type="button" value="Adicionar" />
+                    <input class="responsivo" name="AddPesqueiro" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "ratoeira", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['rat_id'] ?>','distancia')" type="button" value="Adicionar" />
                     <select class="responsivo" style="float:left;" name="nomePesqueiro">
                         <option value="" selected></option>
                         <?php foreach ($this->pesqueiros as $key => $pesqueiro): ?>
@@ -193,8 +193,9 @@
 <fieldset class="noEditable"><legend>Espécies Capturadas:</legend>
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
-            <div >
-                <input class="responsivo" onclick="ajax_select_quantidade_permitido(this.form, '<?= $this->url(array("controller" => "ratoeira", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['rat_id'] ?>, '','<?= $this->url(array("controller" => "ratoeira", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
+            <div>
+                <input readonly="" type="hidden" name="idRelacao" />
+                <input class="responsivo" name="Add" onclick="ajax_select_quantidade_permitido(this.form, '<?= $this->url(array("controller" => "ratoeira", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['rat_id'] ?>, 'venda','<?= $this->url(array("controller" => "ratoeira", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
                 <select class="responsivo-esp" style="float:left;" name="selectEspecie" class="espc">
                     <option value="" selected></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
