--- a/application/views/scripts/arrasto-fundo/editar.phtml
+++ b/application/views/scripts/arrasto-fundo/editar.phtml
@@ -236,7 +236,8 @@
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
 
             <div id="base_peixe">
-                <input class="responsivo" onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "arrasto-fundo", "action" => "insertbiopeixe"), null, true) ?>','<?=$this->entrevista['af_id']?>')" type="button" value="Adicionar" />
+                <input type="hidden" readonly="" name="idRelacaoBioPeixe"/>
+                <input class="responsivo" name="AddBioPeixe" onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "arrasto-fundo", "action" => "insertbiopeixe"), null, true) ?>','<?=$this->entrevista['af_id']?>')" type="button" value="Adicionar" />
                 <select class="responsivo" style="float:left;" name="SelectEspeciePeixe">
                     <option value=""></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
@@ -267,7 +268,8 @@
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
 
             <div id="base_camarao">
-                <input class="responsivo" onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "arrasto-fundo", "action" => "insertbiocamarao"), null, true) ?>','<?=$this->entrevista['af_id']?>')" type="button" value="Adicionar" />
+                <input type="hidden" readonly="" name="idRelacaoBioCamarao"/>
+                <input class="responsivo" name="AddBioCamarao" onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "arrasto-fundo", "action" => "insertbiocamarao"), null, true) ?>','<?=$this->entrevista['af_id']?>')" type="button" value="Adicionar" />
                 <select class="responsivo" style="float:left;" name="SelectEspecieCamarao">
                     <option value=""></option>
                     <?php foreach ($this->especieCamarao as $key => $especieCamarao): ?>
