--- a/application/views/scripts/coleta-manual/editar.phtml
+++ b/application/views/scripts/coleta-manual/editar.phtml
@@ -168,7 +168,7 @@
         <fieldset class="noEditable"><legend>Pesqueiro:</legend>
             <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
                 <div id="base">
-                    <input class="responsivo" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "coleta-manual", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['cml_id'] ?>', 'distancia')" type="button" value="Adicionar" />
+                    <input class="responsivo" name="AddPesqueiro" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "coleta-manual", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['cml_id'] ?>', 'distancia')" type="button" value="Adicionar" />
                     <select class="responsivo" style="float:left;" name="nomePesqueiro">
                         <option value="" selected></option>
                         <?php foreach ($this->pesqueiros as $key => $pesqueiro): ?>
@@ -189,7 +189,8 @@
             <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
                 <div>
-                    <input class="responsivo" onclick="ajax_select_quantidade_permitido(this.form, '<?= $this->url(array("controller" => "coleta-manual", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['cml_id'] ?>, '','<?= $this->url(array("controller" => "coleta-manual", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
+                    <input readonly="" type="hidden" name="idRelacao" />
+                    <input class="responsivo" name="Add" onclick="ajax_select_quantidade_permitido(this.form, '<?= $this->url(array("controller" => "coleta-manual", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['cml_id'] ?>, 'venda','<?= $this->url(array("controller" => "coleta-manual", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
                     <select class="responsivo-esp"  name="selectEspecie" class="espc">
                         <option value="" selected></option>
                         <?php foreach ($this->especies as $key => $especie): ?>
