--- a/application/views/scripts/emalhe/tableespcaptura.phtml
+++ b/application/views/scripts/emalhe/tableespcaptura.phtml
@@ -19,6 +19,13 @@
                 <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'].' kg' ?> </td>
                 <td name="inputPreco"> <?= 'R$ '.$vEspecieCapturada['spc_preco'] ?> </td>
                 <td class="td-botao">
+                    <a name="Editar" class="button-del" onclick="ajax_update_especie(<?= $vEspecieCapturada['spc_cml_id'] ?>, '<?= $vEspecieCapturada['esp_id'] ?>', '<?= $vEspecieCapturada['spc_quantidade'] ?>', '<?= $vEspecieCapturada['spc_peso_kg'] ?>', '<?= $vEspecieCapturada['spc_preco'] ?>', document.getElementById('formEntrevistas'),'')">
+                            <ul id="icons" class="ui-widget ui-helper-clearfix">
+                                <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
+                            </ul>
+                        </a> 
+                    </td>	<br/>
+                <td class="td-botao">
                     <a name="Excluir" class="button-del" onclick="ajax_delete_entrevista_has(<?= $this->entrevista['em_id'] ?>, '<?= $this->url(array("controller" => "emalhe", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_em_id'] ?>, 'especie')">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
