--- a/application/views/scripts/jerere/editar.phtml
+++ b/application/views/scripts/jerere/editar.phtml
@@ -175,7 +175,7 @@
         <fieldset class="noEditable"><legend>Pesqueiro:</legend>
                 <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
                     <div id="base">
-                        <input class="responsivo" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "jerere", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['jre_id'] ?>', 'distancia')" type="button" value="Adicionar" />
+                        <input class="responsivo" name="AddPesqueiro" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "jerere", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['jre_id'] ?>', 'distancia')" type="button" value="Adicionar" />
                         <select class="responsivo" style="float:left;" name="nomePesqueiro">
                             <option value="" selected></option>
                             <?php foreach ($this->pesqueiros as $key => $pesqueiro): ?>
@@ -196,8 +196,9 @@
 
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
-            <div >
-                <input class="responsivo" onclick="ajax_select_peso_permitido(this.form, '<?= $this->url(array("controller" => "jerere", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['jre_id'] ?>, '','<?= $this->url(array("controller" => "jerere", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
+            <div>
+                <input readonly="" type="hidden" name="idRelacao" />
+                <input class="responsivo" name="Add" onclick="ajax_select_peso_permitido(this.form, '<?= $this->url(array("controller" => "jerere", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['jre_id'] ?>, 'venda','<?= $this->url(array("controller" => "jerere", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
                 <select class="responsivo-esp" style="float:left;" name="selectEspecie" class="espc">
                     <option value="" selected></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
