--- a/application/views/scripts/linha-fundo/editar.phtml
+++ b/application/views/scripts/linha-fundo/editar.phtml
@@ -216,7 +216,7 @@
         <fieldset class="noEditable"><legend>Pesqueiro:</legend>
                 <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
                     <div id="base">
-                        <input onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "linha-fundo", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['lf_id'] ?>', 'distancia')" type="button" value="Adicionar" />
+                        <input name="AddPesqueiro" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "linha-fundo", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['lf_id'] ?>', 'distancia')" type="button" value="Adicionar" />
                         <select style="float:left;" name="nomePesqueiro">
                             <?php foreach ($this->pesqueiros as $key => $pesqueiro): ?>
                                 <option value="<?= $pesqueiro['paf_id']; ?>"><?= $pesqueiro['paf_pesqueiro']; ?></option>
@@ -235,8 +235,9 @@
 <fieldset class="noEditable"><legend>Espécies Capturadas:</legend>
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
-            <div >
-                <input class="responsivo" onclick="ajax_select_peso_permitido(this.form, '<?= $this->url(array("controller" => "linha-fundo", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['lf_id'] ?>, '','<?= $this->url(array("controller" => "linha-fundo", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
+            <div>
+                <input readonly="" type="hidden" name="idRelacao" />
+                <input class="responsivo" name="Add" onclick="ajax_select_peso_permitido(this.form, '<?= $this->url(array("controller" => "linha-fundo", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['lf_id'] ?>, 'venda','<?= $this->url(array("controller" => "linha-fundo", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
                 <select class="responsivo-esp" name="selectEspecie">
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
