--- a/application/views/scripts/linha/editar.phtml
+++ b/application/views/scripts/linha/editar.phtml
@@ -189,7 +189,7 @@
 <fieldset class="noEditable"><legend>Pesqueiro:</legend>
         <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
             <div id="base">
-                <input onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "linha", "action" => "insertpesqueiro"), null, true) ?>', '<?=$this->entrevista['lin_id']?>', 'tempo')" type="button" value="Adicionar" />
+                <input class="responsivo" name="AddPesqueiro" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "linha", "action" => "insertpesqueiro"), null, true) ?>', '<?=$this->entrevista['lin_id']?>', 'tempo')" type="button" value="Adicionar" />
                 <select style="float:left;" name="nomePesqueiro">
                     <?php foreach ($this->pesqueiros as $key => $pesqueiro): ?>
                         <option value="<?= $pesqueiro['paf_id']; ?>"><?= $pesqueiro['paf_pesqueiro']; ?></option>
@@ -208,7 +208,8 @@
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
             <div id="base">
-                <input class="responsivo" onclick="ajax_select_peso_permitido(this.form, '<?= $this->url(array("controller" => "linha", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['lin_id'] ?>, '','<?= $this->url(array("controller" => "linha", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
+                <input readonly="" type="hidden" name="idRelacao" />
+                <input class="responsivo" name="Add" onclick="ajax_select_peso_permitido(this.form, '<?= $this->url(array("controller" => "linha", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['lin_id'] ?>, '','<?= $this->url(array("controller" => "linha", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
                 <select style="float:left;" name="selectEspecie">
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
