--- a/application/views/scripts/linha/tableespcaptura.phtml
+++ b/application/views/scripts/linha/tableespcaptura.phtml
@@ -14,9 +14,16 @@
                 <tr id="itemEmbarcacoesRows">
                 <td name="inputEntrevista"> <?= $vEspecieCapturada['lin_id'] ?> </td>
                 <td name="inputEspecie" > <?= $vEspecieCapturada['esp_nome_comum'] ?> </td>
-                <td name="inputQuantidade"> <?= $vEspecieCapturada['spc_quantidade'].' Unidades' ?> </td>
-                <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'].' kg' ?> </td>
-                <td name="inputPreco"> <?= 'R$ '.$vEspecieCapturada['spc_preco'] ?> </td>
+                <td name="inputQuantidade"> <?= $vEspecieCapturada['spc_quantidade'] . ' Unidades' ?> </td>
+                <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'] . ' kg' ?> </td>
+                <td name="inputPreco"> <?= 'R$ ' . $vEspecieCapturada['spc_preco'] ?> </td>
+                <td class="td-botao">
+                    <a name="Editar" class="button-del" onclick="ajax_update_especie(<?= $vEspecieCapturada['spc_lin_id'] ?>, '<?= $vEspecieCapturada['esp_id'] ?>', '<?= $vEspecieCapturada['spc_quantidade'] ?>', '<?= $vEspecieCapturada['spc_peso_kg'] ?>', '<?= $vEspecieCapturada['spc_preco'] ?>', document.getElementById('formEntrevistas'),'')">
+                        <ul id="icons" class="ui-widget ui-helper-clearfix">
+                            <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
+                        </ul>
+                    </a> 
+                </td>	<br/>
                 <td class="td-botao">
                     <a name="Excluir" class="button-del" onclick="ajax_delete_entrevista_has(<?= $this->entrevista['lin_id'] ?>, '<?= $this->url(array("controller" => "linha", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_lin_id'] ?>, 'especie')">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
