--- a/application/views/scripts/manzua/editar.phtml
+++ b/application/views/scripts/manzua/editar.phtml
@@ -171,7 +171,7 @@
         <input type="hidden" name="id_fichaDiaria" placeholder="ID"  value="<?= $this->monitoramento['fd_id'] ?>" /><br />
        
         <fieldset class="noEditable"><legend>Pesqueiro:</legend>
-            <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
+            <fieldset name="AddPesqueiro" class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
                 <div id="base">
                     <input class="responsivo" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "manzua", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['man_id'] ?>', 'distancia')" type="button" value="Adicionar" />
                     <select class="responsivo" style="float:left;" name="nomePesqueiro">
@@ -192,8 +192,9 @@
 <fieldset class="noEditable"><legend>Espécies Capturadas:</legend>
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
-            <div >
-                <input class="responsivo" onclick="ajax_select_peso_permitido(this.form, '<?= $this->url(array("controller" => "manzua", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['man_id'] ?>, '','<?= $this->url(array("controller" => "manzua", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
+            <div>
+                <input readonly="" type="hidden" name="idRelacao" />
+                <input class="responsivo" name="Add" onclick="ajax_select_peso_permitido(this.form, '<?= $this->url(array("controller" => "manzua", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['man_id'] ?>, 'venda','<?= $this->url(array("controller" => "manzua", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
                 <select class="responsivo-esp"  name="selectEspecie" class="espc">
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
