--- a/application/views/scripts/tarrafa/editar.phtml
+++ b/application/views/scripts/tarrafa/editar.phtml
@@ -149,7 +149,7 @@
 <fieldset class="noEditable"><legend>Pesqueiro:</legend>
     <fieldset class="noEditable"><legend>Pesqueiro e tempo no pesqueiro:</legend>
             <div id="base">
-                <input class="responsivo" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "tarrafa", "action" => "insertpesqueiro"), null, true) ?>', '<?=$this->entrevista['tar_id']?>','')" type="button" value="Adicionar" />
+                <input class="responsivo" name="AddPesqueiro" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "tarrafa", "action" => "insertpesqueiro"), null, true) ?>', '<?=$this->entrevista['tar_id']?>','')" type="button" value="Adicionar" />
                 <select class="responsivo" style="float:left;" name="nomePesqueiro">
                     <option value="" selected></option>
                     <?php foreach ($this->pesqueiros as $key => $pesqueiro): ?>
@@ -166,7 +166,8 @@
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
             <div id="base">
-                <input class="responsivo" onclick="ajax_select_peso_permitido(this.form, '<?= $this->url(array("controller" => "tarrafa", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['tar_id'] ?>, '','<?= $this->url(array("controller" => "tarrafa", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
+                <input readonly="" type="hidden" name="idRelacao" />
+                <input class="responsivo" name="Add" onclick="ajax_select_peso_permitido(this.form, '<?= $this->url(array("controller" => "tarrafa", "action" => "insertespeciecapturada"), null, true) ?>', <?= $this->entrevista['tar_id'] ?>, '','<?= $this->url(array("controller" => "tarrafa", "action" => "verificaespecie"), null, true) ?>')" type="button" value="Adicionar" />
                 <select style="float:left;" name="selectEspecie" class="espc">
                     <option value="" selected></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
